<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/home_background">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="332dp"
            android:layout_height="179dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:id="@+id/linearLayout" app:layout_constraintHorizontal_bias="0.492">
        <TextView

                android:hint="@string/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tvEuros" android:textSize="24sp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/euro_logo"
                android:background="@drawable/tvbackground"/>
        <TextView
                android:hint="@string/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tvCop" android:textSize="24sp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/colombia_logo"
                android:background="@drawable/tvbackground"/>
        <TextView

                android:hint="@string/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/tvDollar" android:textSize="24sp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:drawableStart="@drawable/usa_logo"
                android:background="@drawable/tvbackground"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="332dp"
            android:layout_height="240dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout2" app:layout_constraintHorizontal_bias="0.492">
        <Button
                android:text="@string/euro_to_dollar"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="30dp" android:id="@+id/btEuro_Dollar"
                android:textSize="10sp"
                android:background="@drawable/bt_background"/>
        <Button
                android:text="@string/dollar_to_euro"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="30dp" android:id="@+id/btDollar_Euro"
                android:textSize="10sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_background"/>
        <Button
                android:text="@string/cop_to_dollar"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="30dp" android:id="@+id/btCop_Dollar"
                android:textSize="10sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_background"/>
        <Button
                android:text="@string/dollar_to_cop"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="30dp" android:id="@+id/btDollar_Cop"
                android:textSize="10sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_background"/>
        <Button
                android:text="@string/cop_to_euro"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="30dp" android:id="@+id/btCop_Euro"
                android:textSize="10sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_background"/>
        <Button
                android:text="@string/euro_to_cop"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="30dp" android:id="@+id/btEuro_Cop"
                android:textSize="10sp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_background"/>
    </LinearLayout>
    <EditText
            android:layout_width="219dp"
            android:layout_height="28dp"
            android:inputType="number"
            android:textAlignment="center"
            android:textStyle="bold"
            android:hint="@string/value"
            android:ems="10"
            android:background="@drawable/tvbackground"
            android:id="@+id/etValue"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginTop="60dp"
            app:layout_constraintHorizontal_bias="0.579"/>

</androidx.constraintlayout.widget.ConstraintLayout>